--- a/frontend/src/pages/GameSuite.css
+++ b/frontend/src/pages/GameSuite.css
@@ -20,3 +20,39 @@
     font-size: 15px;
     text-decoration: underline;
 }
+
+.Checkers{
+    padding: 8px 25px;
+    margin: 5px 10px;
+    border-radius: 5px;
+    color:#150531;
+    text-align: left;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    text-align: center;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+    padding-left: 34%;
+    text-align: center;
+  }
+
+  .whiteSquare {
+    background-color:white;
+    border: 1px solid white;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .blackSquare {
+    background-color:black;
+    border: 1px solid black;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    color: white;
+  }
