--- a/frontend/src/pages/GameSuite.css
+++ b/frontend/src/pages/GameSuite.css
@@ -20,3 +20,17 @@
     font-size: 15px;
     text-decoration: underline;
 }
+
+.Settings{
+    padding: 8px 20px;
+    margin: 5px 40px;
+    border-radius: 0px;
+    color:#150531;
+    text-align: right;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    position: absolute;
+    right: 0;
+    width: 20px;
+    height: 10px;
+}
