--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -8,25 +8,74 @@
 .login-div{
     background-color: #203354;
     font-size: 20px;
-    color: #7C6E7F;
-    position: fixed;
+    color: #c3e7fd;
+    position: absolute;
     bottom: 0;
     top: 0;
     right: 0;
     left: 0;
     margin: 25px;
     border-radius: 30px;
+      
+    /* height: 90%; 
+    display:flex;
+    align-items: center;
+    justify-content: center; */
 }
 
-.login-text{
+.login-div:hover .overlay {
+    opacity: 1;
+  }
+
+.overlay{
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    border-radius: 30px;
+    background-color: #203354;;
+}
+
+.login-title{
+    text-align: center;
+    height: 30%;
+    font-size: 50px;
+}
+
+.login{
     text-align: center;
 }
+
 
 .login-form{
     text-align: center;
+    position: relative;
 }
 
+.image{
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    opacity: .5;
+    /* height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 30px;
+    z-index: 10;
+    float: left;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    opacity: .2; */
+}
 .signup-div{
     text-align: center;
+    position: relative;
 };
 
