--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -8,7 +8,7 @@
 .login-div{
     background-color: #203354;
     font-size: 20px;
-    color: #c3e7fd;
+    color: #F3FAFF;
     position: absolute;
     bottom: 0;
     top: 0;
@@ -24,7 +24,7 @@
 }
 
 .login-div:hover .overlay {
-    opacity: 1;
+    opacity: .8;
   }
 
 .overlay{
@@ -47,6 +47,12 @@
     font-size: 50px;
 }
 
+.title-img{
+    text-align: center;
+    height: 30%;
+    font-size: 50px;
+}
+
 .login{
     text-align: center;
 }
@@ -62,7 +68,7 @@
     width: 100%;
     height: 100%;
     border-radius: 30px;
-    opacity: .5;
+    opacity: 1;
     /* height: 100%;
     width: 100%;
     object-fit: cover;
