--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -1,9 +1,23 @@
-/* input{
-    padding: 8px 25px;
+input{
+    padding: 8px 10px;
     margin: 5px 10px;
     border-radius: 5px;
-    border-color: #ED820E;
-} */
+    border-color: #FF7034;
+}
+
+input[type="text"]{
+    font-size: 20px; 
+}
+
+input[type="password"]{
+    font-size: 20px; 
+}
+
+label{
+    font-family: "Lucida Console";
+    letter-spacing: 1px;
+    color: #F3FAFF;
+}
 
 .login-div{
     background-color: #203354;
@@ -16,11 +30,6 @@
     left: 0;
     margin: 25px;
     border-radius: 30px;
-      
-    /* height: 90%; 
-    display:flex;
-    align-items: center;
-    justify-content: center; */
 }
 
 .login-div:hover .overlay {
@@ -44,7 +53,22 @@
 .login-title{
     text-align: center;
     height: 30%;
-    font-size: 50px;
+    font-size: 60px;
+    font-family: fantasy;
+    letter-spacing: 20px;
+    word-spacing: 10px;
+    line-height: 70px;
+}
+
+.title-span{
+    text-align: center;
+    height: 30%;
+    font-size: 70px;
+    font-family: fantasy;
+    letter-spacing: 20px;
+    word-spacing: 10px;
+    line-height: 70px;
+    color: #FF7034;
 }
 
 .title-img{
@@ -55,12 +79,20 @@
 
 .login{
     text-align: center;
+    font-size: 40px;
+    font-family: "Lucida Console";
+    letter-spacing: 3px;
+    color: #F3FAFF;
 }
-
 
 .login-form{
     text-align: center;
     position: relative;
+}
+
+.form-div{
+    background-color: #203354;
+    z-index: 1000;
 }
 
 .image{
@@ -69,17 +101,8 @@
     height: 100%;
     border-radius: 30px;
     opacity: 1;
-    /* height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 30px;
-    z-index: 10;
-    float: left;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    opacity: .2; */
 }
+
 .signup-div{
     text-align: center;
     position: relative;
