--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -21,12 +21,12 @@ label{
 }
 
 button{
-    padding: 10px;
+    padding: 13px;
     border: none;
     border-radius: 11px;
     color:#FF7034;
     background-color: antiquewhite;
-    width:5%;
+    width: auto;
     font-weight: 600;
     font-family: Arial;
     font-size: 15px;
@@ -42,7 +42,7 @@ button:hover{
 
 .login-div{
     background-color: #203354;
-    font-size: 20px;
+    font-size: 10px;
     color: #F3FAFF;
     position: absolute;
     bottom: 0;
@@ -73,7 +73,7 @@ button:hover{
 
 .login-title{
     text-align: center;
-    height: 30%;
+    height: 8%;
     font-size: 60px;
     font-family: fantasy;
     letter-spacing: 20px;
@@ -129,6 +129,17 @@ button:hover{
     opacity: 1;
 }
 
+.game-bot{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+}
+
+.game-bot:hover{
+    opacity:1;
+}
+
 .signup-text{
     text-align: center;
     font-size: 20px;
@@ -150,6 +161,6 @@ button:hover{
 .signup-div{
     text-align: center;
     position: relative;
-    margin: 110px 0;
+    margin: 90px 0;
 };
 
