--- a/frontend/src/pages/games/checkers/Checkers.css
+++ b/frontend/src/pages/games/checkers/Checkers.css
@@ -3,7 +3,6 @@
     display: grid;
     grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px;
     grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px;
-    
 }
 
 .Piece {
@@ -35,7 +34,12 @@
 .PopUp {
     position: absolute;
     color:#444;
-    background: rgba(255,255,255,0.7);
+    background: rgba(100, 255, 200);
+    text-align: center;
+
+    top: 50%;
+    left: 50%;
+    margin: -150px 0 0 -95px;
 }
 
 .PopUp.internal {
