--- a/frontend/src/pages/games/checkers/Checkers.css
+++ b/frontend/src/pages/games/checkers/Checkers.css
@@ -33,8 +33,8 @@
 
 .PopUp {
     position: absolute;
-    color:#444;
-    background: rgba(100, 255, 200);
+    color:rgb(255, 255, 255);
+    background: rgb(49, 49, 49);
     text-align: center;
 
     top: 50%;
@@ -46,6 +46,7 @@
     position: relative;
     width: 300px;
     margin: 0 auto;
+    color: aliceblue;
 }
 
 .PopUp.internal.close {
