--- a/frontend/src/pages/GameSuite.css
+++ b/frontend/src/pages/GameSuite.css
@@ -21,7 +21,7 @@
   text-decoration: underline;
 }
 
-.BackButton {
+/* .BackButton {
   padding: 8px 25px;
   margin: 5px 10px;
   border-radius: 5px;
@@ -30,7 +30,23 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   text-decoration: underline;
+} */
+
+.BackButton{
+  padding: 8px 25px;
+  margin: 5px 10px;
+  border-radius: 5px;
+  color:#150531;
+  text-align: left;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  text-decoration: underline;
+  position: absolute;
+  right: 1;
+  width: 20px;
+  height: 10px;
 }
+
 
 .Checkers {
   position: relative;
@@ -66,4 +82,19 @@
   font-size: 30px;
   text-align: center;
   color: white;
+}
+
+.Settings{
+  padding: 8px 20px;
+  margin: 5px 40px;
+  border-radius: 0px;
+  color:#150531;
+  text-align: right;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  position: absolute;
+  right: 0;
+  width: 20px;
+  height: 10px;
+  text-decoration: underline;
 }
