--- a/frontend/src/pages/GameSuite.css
+++ b/frontend/src/pages/GameSuite.css
@@ -3,7 +3,7 @@
   margin: 5px 10px;
   border-radius: 5px;
   border-color: #ed820e;
-  background-color: aquamarine;
+  background-color: #203354;
   color: #150531;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -73,11 +73,29 @@
   color: white;
 }
 
+.gameSuiteText{
+  text-align: center;
+    font-size: 32px;
+    font-family: fantasy;
+    letter-spacing: 3px;
+    word-spacing: 10px;
+    color: #FF7034;
+}
+
+.gameSuiteText2{
+  text-align: center;
+    font-size: 20px;
+    font-family: fantasy;
+    letter-spacing: 1px;
+    word-spacing: 10px;
+    color: #FF7034;
+}
+
 .Settings{
   padding: 8px 20px;
   margin: 5px 40px;
   border-radius: 0px;
-  color:#150531;
+  color:#F3FAFF;
   text-align: right;
   font-family:Arial, Helvetica, sans-serif;
   font-size: 15px;
@@ -86,4 +104,13 @@
   width: 20px;
   height: 10px;
   text-decoration: underline;
+}
+
+.profPic{
+  position: relative;
+}
+
+.picDiv{
+  position:absolute;
+  top: 5%;
 }
