--- a/frontend/src/pages/GameSuite.css
+++ b/frontend/src/pages/GameSuite.css
@@ -60,6 +60,33 @@
   text-align: center;
 }
 
+.redPiece {
+  background-image: url(images/Red-checkers-piece.png);
+  background-size: 45px 45px;
+  background-repeat: no-repeat;
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  border: 1px solid white;
+  padding: 1px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.blackPiece {
+  background-image: url(./images/Black-checkers-piece.png);
+  background-size: 45px 45px;
+  background-repeat: no-repeat;
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  border: 1px solid white;
+  padding: 1px;
+  font-size: 30px;
+  text-align: center;
+}
+
+
 .blackSquare {
   height: 50px;
   width: 50px;
